tests/sumo/errors/routes/disconnected_off_customTeleport0/tripinfos.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2021-04-22 14:56:01 by Eclipse SUMO sumo Version v1_9_0+0171-ce97ad2
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <tripinfo-output value="tripinfos.xml"/>
    </output>

    <processing>
        <ignore-route-errors value="true"/>
        <time-to-teleport value="100"/>
        <time-to-teleport.disconnected value="0"/>
        <default.speeddev value="0"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <xml-validation.routes value="never"/>
        <duration-log.disable value="true"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<tripinfos xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/tripinfo_file.xsd">
    <tripinfo id="0" depart="0.00" departLane="beg_0" departPos="5.10" departSpeed="0.00" departDelay="0.00" arrival="63.00" arrivalLane="rend_0" arrivalPos="500.00" arrivalSpeed="27.80" duration="63.00" routeLength="1494.90" waitingTime="1.00" waitingCount="1" stopTime="0.00" timeLoss="9.20" rerouteNo="0" devices="tripinfo_0" vType="DEFAULT_VEHTYPE" speedFactor="1.00" vaporized=""/>
    <tripinfo id="1" depart="0.00" departLane="middle_0" departPos="5.10" departSpeed="0.00" departDelay="0.00" arrival="194.00" arrivalLane="end_0" arrivalPos="500.00" arrivalSpeed="27.80" duration="194.00" routeLength="1494.90" waitingTime="101.00" waitingCount="1" stopTime="0.00" timeLoss="104.60" rerouteNo="0" devices="tripinfo_1" vType="DEFAULT_VEHTYPE" speedFactor="1.00" vaporized=""/>
    <tripinfo id="blocker" depart="0.00" departLane="end_0" departPos="5.00" departSpeed="0.00" departDelay="0.00" arrival="423.00" arrivalLane="end_0" arrivalPos="500.00" arrivalSpeed="27.80" duration="423.00" routeLength="495.00" waitingTime="0.00" waitingCount="0" stopTime="400.00" timeLoss="4.86" rerouteNo="0" devices="tripinfo_blocker routing_blocker" vType="DEFAULT_VEHTYPE" speedFactor="1.00" vaporized=""/>
</tripinfos>
